--- a/Todo
+++ b/Todo
@@ -20,6 +20,7 @@ Todo
     - add load game functionality
     - add reset/start new functionality
     - mark last move
+    - exit edit mode
 
 
 * progress
